--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <a class="btn btn-primary btn-xl" href="options.html">Démarrer</a>
       </div>
       <div class="home-row">
-        <button class="btn btn-outline btn-xl" id="btn-safety">Fiche sécurité</button>
-        <a class="btn btn-outline btn-xl" href="aide.html">Aide</a>
+        <button class="btn btn-grad btn-xl" id="btn-safety">Fiche sécurité</button>
+        <a class="btn btn-grad btn-xl" href="aide.html">Aide</a>
       </div>
     </div>
   </main>
@@ -68,7 +68,6 @@
   </div>
 
   <script>
-    // Wire modal open/close
     (function(){
       const backdrop = document.getElementById('safety-backdrop');
       const openBtn = document.getElementById('btn-safety');
