--- a/options.html
+++ b/options.html
@@ -43,7 +43,7 @@
       <a href="aide.html" class="btn btn-outline">Aide</a>
     </div>
 
-    <section class="card">
+    <section class="card gradient-border centered">
       <h2>Informations élève</h2>
       <form class="grid-2">
         <label>Nom
@@ -66,9 +66,9 @@
       </form>
     </section>
 
-    <section class="card">
+    <section class="card gradient-border centered">
       <h2>Choisir un mode</h2>
-      <div class="mode-buttons">
+      <div class="mode-buttons center-grid">
         <button class="btn btn-blue"    onclick="go('intervalles')">Temps intermédiaire</button>
         <button class="btn btn-green"   onclick="go('simple')">Chrono</button>
         <button class="btn btn-emerald" onclick="go('minuteurSimple')">Minuteur</button>
@@ -77,9 +77,9 @@
       </div>
     </section>
 
-    <section class="card">
-      <h2>Tests d'endurance (optionnel)</h2>
-      <div class="mode-buttons">
+    <section class="card gradient-border centered">
+      <h2>Tests d'endurance</h2>
+      <div class="mode-buttons center-grid">
         <button class="btn btn-pink"   onclick="go('demiCooper')">Demi-Cooper (6′)</button>
         <button class="btn btn-pink"   onclick="go('cooper')">Cooper (12′)</button>
       </div>
