--- a/aide.html
+++ b/aide.html
@@ -28,12 +28,12 @@
 
       <article class="help-card hc-green">
         <h3>Chrono</h3>
-        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, <strong>pas de QR</strong>.</p>
+        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, <strong>pas de QR</strong>. Affichage <strong>grand format</strong>.</p>
       </article>
 
       <article class="help-card hc-emerald">
         <h3>Minuteur</h3>
-        <p>Compte à rebours visuel. Sélecteurs dédiés <strong>minutes (0–120)</strong> et <strong>secondes (0–59)</strong>. <strong>Pas de QR</strong>.</p>
+        <p>Compte à rebours visuel. Sélecteurs dédiés <strong>minutes (0–120)</strong> et <strong>secondes (0–59)</strong>. <strong>Pas de QR</strong>. Cercle <strong>grand format</strong>.</p>
       </article>
 
       <article class="help-card hc-purple">
