--- a/aide.html
+++ b/aide.html
@@ -23,7 +23,7 @@
     <section class="cards-grid">
       <article class="help-card hc-blue">
         <h3>Temps intermédiaire</h3>
-        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, le QR se génère automatiquement (par défaut <em>temps cumulés</em>) et tu peux basculer sur <em>temps par intervalle</em>.</p>
+        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, le QR se génère automatiquement (il contient <em>cumulés</em> <u>et</u> <em>par intervalle</em>).</p>
       </article>
 
       <article class="help-card hc-green">
@@ -43,7 +43,7 @@
 
       <article class="help-card hc-amber">
         <h3>Minuteur avec distance</h3>
-        <p>Choisis la durée via sélecteurs <em>minutes/secondes</em> + la distance par tour. Tableau : <em>Temps cumulé</em>, <em>Temps au tour</em>, <em>Vitesse</em>, <em>Distance cumulée</em>. En fin de test, ajoute ¼, ½, ¾ : tout se met à jour (récap + total du tableau + QR).</p>
+        <p>Choisis la durée via sélecteurs <em>minutes/secondes</em> + la distance par tour. Tableau : <em>Temps cumulé</em>, <em>Temps tour</em>, <em>Vitesse</em>, <em>Distance cumulée</em>. En fin de test, ajoute ¼, ½, ¾ : tout se met à jour (récap + total du tableau + QR).</p>
       </article>
 
       <article class="help-card hc-pink">
