--- a/aide.html
+++ b/aide.html
@@ -1,60 +1,17 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aide • RunMeasure</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header class="topbar colorful">
-    <h1>RunMeasure</h1>
-  </header>
-
-  <main class="container">
-    <div class="nav-row">
-      <a href="index.html" class="btn btn-outline">&larr; Accueil</a>
-      <a href="options.html" class="btn btn-outline">Démarrer</a>
-    </div>
-
-    <section class="cards-grid">
-      <article class="help-card hc-blue">
-        <h3>Temps intermédiaire</h3>
-        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, le QR se génère automatiquement (il contient <em>cumulés</em> <u>et</u> <em>par intervalle</em>).</p>
-      </article>
-
-      <article class="help-card hc-green">
-        <h3>Chrono</h3>
-        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, <strong>pas de QR</strong>. Affichage <strong>grand format</strong>.</p>
-      </article>
-
-      <article class="help-card hc-emerald">
-        <h3>Minuteur</h3>
-        <p>Compte à rebours visuel. Sélecteurs dédiés <strong>minutes (0–120)</strong> et <strong>secondes (0–59)</strong>. <strong>Pas de QR</strong>. Cercle <strong>grand format</strong>.</p>
-      </article>
-
-      <article class="help-card hc-purple">
-        <h3>Chrono avec calcul de vitesse</h3>
-        <p>Indique une distance (ex. 100 m), lance puis <strong>Stop</strong> à l’arrivée : vitesse moyenne calculée. Récapitulatif + QR minimal.</p>
-      </article>
-
-      <article class="help-card hc-amber">
-        <h3>Minuteur avec distance</h3>
-        <p>Choisis la durée via sélecteurs <em>minutes/secondes</em> + la distance par tour. Tableau : <em>Temps cumulé</em>, <em>Temps tour</em>, <em>Vitesse</em>, <em>Distance cumulée</em>. En fin de test, ajoute ¼, ½, ¾ : tout se met à jour (récap + total du tableau + QR).</p>
-      </article>
-
-      <article class="help-card hc-pink">
-        <h3>Tests d’endurance</h3>
-        <p><strong>Demi-Cooper (6′)</strong> / <strong>Cooper (12′)</strong>. Tableau identique; les boutons ¼, ½, ¾ actualisent la distance totale, la vitesse moyenne, la <strong>VMA</strong> et le QR.</p>
-      </article>
-    </section>
-  </main>
-
-  <footer class="footer">
-    RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
-  </footer>
-</body>
-</html>
+<html lang="fr"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><title>Aide • RunMeasure</title>
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet"><link rel="stylesheet" href="style.css"/></head>
+<body><header class="topbar colorful"><h1>RunMeasure</h1></header>
+<main class="container">
+  <div class="nav-row"><a href="index.html" class="btn btn-outline">&larr; Accueil</a><a href="options.html" class="btn btn-outline">Démarrer</a></div>
+  <section class="cards-grid">
+    <article class="help-card hc-blue"><h3>Temps intermédiaire</h3><p>QR compact (secondes à 0,1 s) avec cumulés <u>et</u> intervalles.</p></article>
+    <article class="help-card hc-green"><h3>Chrono</h3><p>Démarrer/Stop/Reset. Pas de QR. Affichage grand format.</p></article>
+    <article class="help-card hc-emerald"><h3>Minuteur</h3><p>Compte à rebours. Pas de QR. Cercle grand format.</p></article>
+    <article class="help-card hc-purple"><h3>Chrono avec calcul de vitesse</h3><p>Distance fixe (100 m…). Stop à l’arrivée. Récap + QR.</p></article>
+    <article class="help-card hc-amber"><h3>Minuteur avec distance</h3><p>Tableau : cumulé / tour / vitesse / distance cumulée. Fractions ¼ ½ ¾.</p></article>
+    <article class="help-card hc-pink"><h3>Tests d’endurance</h3><p>Demi‑Cooper/Cooper avec VMA.</p></article>
+  </section>
+</main>
+<footer class="footer">RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer></body></html>
