--- a/aide.html
+++ b/aide.html
@@ -6,12 +6,12 @@
 <main class="container">
   <div class="nav-row"><a href="index.html" class="btn btn-outline">&larr; Accueil</a><a href="options.html" class="btn btn-outline">Démarrer</a></div>
   <section class="cards-grid">
-    <article class="help-card hc-blue"><h3>Temps intermédiaire</h3><p>QR compact (secondes à 0,1 s) avec cumulés <u>et</u> intervalles.</p></article>
+    <article class="help-card hc-blue"><h3>Temps intermédiaire</h3><p>Le QR contient <strong>uniquement</strong> les <em>temps cumulés</em> (t200, t400, …).</p></article>
     <article class="help-card hc-green"><h3>Chrono</h3><p>Démarrer/Stop/Reset. Pas de QR. Affichage grand format.</p></article>
     <article class="help-card hc-emerald"><h3>Minuteur</h3><p>Compte à rebours. Pas de QR. Cercle grand format.</p></article>
     <article class="help-card hc-purple"><h3>Chrono avec calcul de vitesse</h3><p>Distance fixe (100 m…). Stop à l’arrivée. Récap + QR.</p></article>
     <article class="help-card hc-amber"><h3>Minuteur avec distance</h3><p>Tableau : cumulé / tour / vitesse / distance cumulée. Fractions ¼ ½ ¾.</p></article>
-    <article class="help-card hc-pink"><h3>Tests d’endurance</h3><p>Demi‑Cooper/Cooper avec VMA.</p></article>
+    <article class="help-card hc-pink"><h3>Tests d’endurance</h3><p>Demi-Cooper/Cooper avec VMA.</p></article>
   </section>
 </main>
 <footer class="footer">RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer></body></html>
