--- a/aide.html
+++ b/aide.html
@@ -1,60 +1,17 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aide • RunMeasure</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header class="topbar colorful">
-    <h1>RunMeasure</h1>
-  </header>
-
-  <main class="container">
-    <div class="nav-row">
-      <a href="index.html" class="btn btn-outline">&larr; Accueil</a>
-      <a href="options.html" class="btn btn-outline">Démarrer</a>
-    </div>
-
-    <section class="cards-grid">
-      <article class="help-card hc-blue">
-        <h3>Temps intermédiaire</h3>
-        <p>Fixe une distance cible (ex. 800 m) et un intervalle (ex. 200 m). Appuie sur <strong>Tour</strong> à chaque passage. À la fin, exporte au choix les <em>temps cumulés</em> (t200, t400…) ou les <em>temps par intervalle</em> (i1, i2…).</p>
-      </article>
-
-      <article class="help-card hc-green">
-        <h3>Chrono</h3>
-        <p>Chronométrage simple : <strong>Démarrer</strong>, <strong>Stop</strong>, <strong>Reset</strong>. Pas de tours, pas de QR.</p>
-      </article>
-
-      <article class="help-card hc-emerald">
-        <h3>Minuteur</h3>
-        <p>Compte à rebours visuel avec anneau et affichage central. Parfait pour gérer des ateliers en temps limité.</p>
-      </article>
-
-      <article class="help-card hc-purple">
-        <h3>Chrono avec calcul de vitesse</h3>
-        <p>Indique une distance (ex. 100 m), lance le chrono et <strong>Stop</strong> à l’arrivée : la vitesse moyenne est calculée. Récapitulatif + QR minimal.</p>
-      </article>
-
-      <article class="help-card hc-amber">
-        <h3>Minuteur avec distance</h3>
-        <p>Définit une durée et une distance par tour (ex. 100 m). Chaque <strong>Tour</strong> additionne la distance et calcule la vitesse du tour. Fin de test : ajoute ¼, ½ ou ¾ de tour si besoin.</p>
-      </article>
-
-      <article class="help-card hc-pink">
-        <h3>Tests d’endurance</h3>
-        <p><strong>Demi-Cooper (6′)</strong> et <strong>Cooper (12′)</strong>. Indique la distance par tour. En fin de test, ajuste avec ¼, ½ ou ¾ de tour. VMA = vitesse moyenne.</p>
-      </article>
-    </section>
-  </main>
-
-  <footer class="footer">
-    RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB
-  </footer>
-</body>
-</html>
+<html lang="fr"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><title>Aide • RunMeasure</title>
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet"><link rel="stylesheet" href="style.css"/></head>
+<body><header class="topbar colorful"><h1>RunMeasure</h1></header>
+<main class="container">
+  <div class="nav-row"><a href="index.html" class="btn btn-outline">&larr; Accueil</a><a href="options.html" class="btn btn-outline">Démarrer</a></div>
+  <section class="cards-grid">
+    <article class="help-card hc-blue"><h3>Temps intermédiaire</h3><p>Le QR contient <strong>uniquement</strong> les <em>temps cumulés</em> (t200, t400, …).</p></article>
+    <article class="help-card hc-green"><h3>Chrono</h3><p>Démarrer/Stop/Reset. Pas de QR. Affichage grand format.</p></article>
+    <article class="help-card hc-emerald"><h3>Minuteur</h3><p>Compte à rebours. Pas de QR. Cercle grand format.</p></article>
+    <article class="help-card hc-purple"><h3>Chrono avec calcul de vitesse</h3><p>Distance fixe (100 m…). Stop à l’arrivée. Récap + QR.</p></article>
+    <article class="help-card hc-amber"><h3>Minuteur avec distance</h3><p>Tableau : cumulé / tour / vitesse / distance cumulée. Fractions ¼ ½ ¾.</p></article>
+    <article class="help-card hc-pink"><h3>Tests d’endurance</h3><p>Demi-Cooper/Cooper avec VMA.</p></article>
+  </section>
+</main>
+<footer class="footer">RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer></body></html>
