--- a/aide.html
+++ b/aide.html
@@ -6,7 +6,7 @@
 <main class="container">
   <div class="nav-row"><a href="index.html" class="btn btn-outline">&larr; Accueil</a><a href="options.html" class="btn btn-outline">Démarrer</a></div>
   <section class="cards-grid">
-    <article class="help-card hc-blue"><h3>Temps intermédiaire</h3><p>Le QR contient <strong>uniquement</strong> les <em>temps cumulés</em> (t200, t400, …).</p></article>
+    <article class="help-card hc-blue"><h3>Temps intermédiaire</h3><p>Le QR contient <strong>uniquement</strong> les <em>temps cumulés</em> dans <code>tc</code> au format <code>MM:SS</code> séparés par <code>|</code> (ex. <code>00:34|01:10|01:46|02:21</code>), avec <code>distance</code> et <code>intervalle</code>.</p></article>
     <article class="help-card hc-green"><h3>Chrono</h3><p>Démarrer/Stop/Reset. Pas de QR. Affichage grand format.</p></article>
     <article class="help-card hc-emerald"><h3>Minuteur</h3><p>Compte à rebours. Pas de QR. Cercle grand format.</p></article>
     <article class="help-card hc-purple"><h3>Chrono avec calcul de vitesse</h3><p>Distance fixe (100 m…). Stop à l’arrivée. Récap + QR.</p></article>
