--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RunMeasure</title>
+  <title>RunMeasure V8.3</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -22,6 +22,7 @@
         <a class="btn btn-grad btn-xl" href="aide.html">Aide</a>
       </div>
     </div>
+    <div style="margin-top:8px;color:#555;font-weight:700">Version V8.3</div>
   </main>
   <footer class="footer">RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
   <div class="modal-backdrop" id="safety-backdrop" aria-hidden="true">
