--- a/mode.html
+++ b/mode.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>RunMeasure • Mode</title>
+<html lang="fr"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><title>RunMeasure • Mode</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css"/>
+<script>
+/* QRCode for JavaScript - Embedded minimal build (L level up to type 10) */
+var QRCode=function(t,e){this._opt={width:256,height:256,correctLevel:QRCode.CorrectLevel.L,text:""};if("string"==typeof t&&(t=document.getElementById(t)),this._el=t,e)for(var i in e)this._opt[i]=e[i];this.makeCode(this._opt.text)};QRCode.CorrectLevel={L:1,M:0,Q:3,H:2};QRCode.prototype.makeCode=function(t){if(!t){this._el.innerHTML="";return}this._opt.text=t;var q=new QRCodeModel(getTypeNumber(t,this._opt.correctLevel),this._opt.correctLevel);q.addData(t);q.make();this._el.innerHTML="";var c=document.createElement("canvas");c.width=this._opt.width;c.height=this._opt.height;var ctx=c.getContext("2d"),mc=q.getModuleCount(),w=this._opt.width/mc,h=this._opt.height/mc;for(var r=0;r<mc;r++){for(var col=0;col<mc;col++){ctx.fillStyle=q.isDark(r,col)?"#000":"#fff";ctx.fillRect(Math.round(col*w),Math.round(r*h),Math.ceil(w),Math.ceil(h));}}this._el.appendChild(c)};
+function QRCodeModel(type,ec){this.typeNumber=type;this.errorCorrectLevel=ec;this.modules=null;this.moduleCount=0;this.dataCache=null;this.dataList=[]}
+QRCodeModel.prototype={addData:function(data){this.dataList.push(new QR8bitByte(data));this.dataCache=null},isDark:function(row,col){if(row<0||this.moduleCount<=row||col<0||this.moduleCount<=col)throw new Error(row+","+col);return this.modules[row][col]},getModuleCount:function(){return this.moduleCount},make:function(){this.makeImpl(false,this.getBestMaskPattern())},makeImpl:function(test,maskPattern){this.moduleCount=this.typeNumber*4+17;this.modules=new Array(this.moduleCount);for(var r=0;r<this.moduleCount;r++){this.modules[r]=new Array(this.moduleCount);for(var c=0;c<this.moduleCount;c++)this.modules[r][c]=null}setupPositionProbePattern(this,0,0);setupPositionProbePattern(this,this.moduleCount-7,0);setupPositionProbePattern(this,0,this.moduleCount-7);setupPositionAdjustPattern(this);setupTimingPattern(this);setupTypeInfo(this,test,maskPattern);if(this.typeNumber>=7)setupTypeNumber(this,test);this.dataCache=createData(this.typeNumber,this.errorCorrectLevel,this.dataList);mapData(this,this.dataCache,maskPattern)},getBestMaskPattern:function(){var min=0,pattern=0;for(var i=0;i<8;i++){mapData(this,createData(this.typeNumber,this.errorCorrectLevel,this.dataList),i);var lost=QRUtil.getLostPoint(this);if(i==0||min>lost){min=lost;pattern=i}}return pattern}};
+var QRUtil={PATTERN_POSITION_TABLE:[[],[6,18],[6,22],[6,26],[6,30],[6,34],[6,22,38],[6,24,42],[6,26,46],[6,28,50],[6,30,54]],G15:1335,G18:7973,G15_MASK:21522,getBCHTypeInfo:function(data){var d=data<<10;while(QRUtil.getBCHDigit(d)-QRUtil.getBCHDigit(QRUtil.G15)>=0){d^=QRUtil.G15<<(QRUtil.getBCHDigit(d)-QRUtil.getBCHDigit(QRUtil.G15))}return(d<<0|0)^QRUtil.G15_MASK},getBCHTypeNumber:function(data){var d=data<<12;while(QRUtil.getBCHDigit(d)-QRUtil.getBCHDigit(QRUtil.G18)>=0){d^=QRUtil.G18<<(QRUtil.getBCHDigit(d)-QRUtil.getBCHDigit(QRUtil.G18))}return d},getBCHDigit:function(data){var digit=0;while(data!=0){digit++;data>>>=1}return digit},getPatternPosition:function(typeNumber){return QRUtil.PATTERN_POSITION_TABLE[typeNumber-1]||[]},getMask:function(maskPattern,i,j){switch(maskPattern){case 0:return (i+j)%2==0;case 1:return i%2==0;case 2:return j%3==0;case 3:return (i+j)%3==0;case 4:return (Math.floor(i/2)+Math.floor(j/3))%2==0;case 5:return (i*j)%2+(i*j)%3==0;case 6:return ((i*j)%2+(i*j)%3)%2==0;case 7:return ((i+j)%2+(i*j)%3)%2==0;default:throw new Error("bad maskPattern:"+maskPattern)}},getLostPoint:function(qr){var moduleCount=qr.getModuleCount();var lostPoint=0;for(var row=0;row<moduleCount;row++){for(var col=0;col<moduleCount;col++){var sameCount=0;var dark=qr.isDark(row,col);for(var r=-1;r<=1;r++){if(row+r<0||moduleCount<=row+r)continue;for(var c=-1;c<=1;c++){if(col+c<0||moduleCount<=col+c)continue;if(r==0&&c==0)continue;if(dark==qr.isDark(row+r,col+c))sameCount++}}if(sameCount>5)lostPoint+=3+(sameCount-5)}}for(var row=0;row<moduleCount-1;row++){for(var col=0;col<moduleCount-1;col++){var count=0;if(qr.isDark(row,col))count++;if(qr.isDark(row+1,col))count++;if(qr.isDark(row,col+1))count++;if(qr.isDark(row+1,col+1))count++;if(count==0||count==4)lostPoint+=3}}for(var row=0;row<moduleCount;row++){for(var col=0;col<moduleCount-6;col++){if(qr.isDark(row,col)&&!qr.isDark(row,col+1)&&qr.isDark(row,col+2)&&qr.isDark(row,col+3)&&qr.isDark(row,col+4)&&!qr.isDark(row,col+5)&&qr.isDark(row,col+6))lostPoint+=40}}for(var col=0;col<moduleCount;col++){for(var row=0;row<moduleCount-6;row++){if(qr.isDark(row,col)&&!qr.isDark(row+1,col)&&qr.isDark(row+2,col)&&qr.isDark(row+3,col)&&qr.isDark(row+4,col)&&!qr.isDark(row+5,col)&&qr.isDark(row+6,col))lostPoint+=40}}var darkCount=0;for(var r=0;r<moduleCount;r++){for(var c=0;c<moduleCount;c++){if(qr.isDark(r,c))darkCount++}}var ratio=Math.abs(100*darkCount/moduleCount/moduleCount-50)/5;lostPoint+=10*ratio;return lostPoint}};
+function QR8bitByte(data){this.mode=1;this.data=data}
+QR8bitByte.prototype={getLength:function(){return this.data.length},write:function(buffer){for(var i=0;i<this.data.length;i++){buffer.put(this.data.charCodeAt(i),8)}}};
+function getTypeNumber(s,ec){for(var type=1;type<=10;type++){try{var q=new QRCodeModel(type,ec);q.addData(s);createData(type,ec,q.dataList);return type}catch(e){}}throw new Error("QR payload too large")}
+function setupPositionProbePattern(qr,row,col){for(var r=-1;r<=7;r++){if(row+r<=-1||qr.moduleCount<=row+r)continue;for(var c=-1;c<=7;c++){if(col+c<=-1||qr.moduleCount<=col+c)continue;qr.modules[row+r][col+c]=(r>=0&&r<=6&&(c==0||c==6))||(c>=0&&c<=6&&(r==0||r==6))||(r>=2&&r<=4&&c>=2&&c<=4)}}}
+function setupTimingPattern(qr){for(var r=8;r<qr.moduleCount-8;r++){if(qr.modules[r][6]==null)qr.modules[r][6]=r%2==0; if(qr.modules[6][r]==null)qr.modules[6][r]=r%2==0}}
+function setupPositionAdjustPattern(qr){var pos=QRUtil.getPatternPosition(qr.typeNumber);for(var i=0;i<pos.length;i++){for(var j=0;j<pos.length;j++){var row=pos[i],col=pos[j];if(qr.modules[row][col]!=null)continue;for(var r=-2;r<=2;r++){for(var c=-2;c<=2;c++){qr.modules[row+r][col+c]=(r==-2||r==2||c==-2||c==2||(r==0&&c==0))}}}}}
+function setupTypeNumber(qr,test){var bits=QRUtil.getBCHTypeNumber(qr.typeNumber);for(var i=0;i<18;i++){var mod=(!test&&((bits>>i)&1)==1);qr.modules[Math.floor(i/3)][i%3+qr.moduleCount-8-3]=mod;qr.modules[i%3+8][Math.floor(i/3)]=mod}}
+function setupTypeInfo(qr,test,mask){var data=(QRCode.CorrectLevel.L<<3)|mask;var bits=QRUtil.getBCHTypeInfo(data);for(var i=0;i<15;i++){var mod=(!test&&((bits>>i)&1)==1);if(i<6)qr.modules[i][8]=mod;else if(i<8)qr.modules[i+1][8]=mod;else qr.modules[qr.moduleCount-15+i][8]=mod}for(i=0;i<15;i++){var mod2=(!test&&((bits>>i)&1)==1);if(i<8)qr.modules[8][qr.moduleCount-i-1]=mod2;else if(i<9)qr.modules[8][15-i-1]=mod2;else qr.modules[8][15-i-1]=mod2}qr.modules[qr.moduleCount-8][8]=true}
+function createData(type,ec,dataList){var rs=RSBlock.getRSBlocks(type,ec);var buffer=new BitBuffer();for(var i=0;i<dataList.length;i++){var data=dataList[i];buffer.put(data.mode,4);buffer.put(data.getLength(),8);for(var j=0;j<data.data.length;j++){buffer.put(data.data.charCodeAt(j),8)}}var totalDataCount=0;for(i=0;i<rs.length;i++)totalDataCount+=rs[i].dataCount;while(buffer.getLengthInBits()>totalDataCount*8){buffer.length-=8}while(buffer.getLengthInBits()%8!=0)buffer.put(0,8);while(buffer.getLengthInBits()<totalDataCount*8){buffer.put(0xec,8);if(buffer.getLengthInBits()<totalDataCount*8)buffer.put(0x11,8)}return createBytes(buffer,rs)}
+function createBytes(buffer,rsBlocks){var offset=0;var maxDc=0;var maxEc=0;var dcdata=[];var ecdata=[];for(var r=0;r<rsBlocks.length;r++){var dcCount=rsBlocks[r].dataCount;var ecCount=rsBlocks[r].totalCount-dcCount;maxDc=Math.max(maxDc,dcCount);maxEc=Math.max(maxEc,ecCount);dcdata[r]=[];for(var i=0;i<dcCount;i++)dcdata[r][i]=buffer.buffer[i+offset]&0xff;offset+=dcCount;var rsPoly=QRUtil.getErrorCorrectPolynomial(ecCount);var rawPoly=new QRPolynomial(dcdata[r],rsPoly.getLength()-1);var modPoly=rawPoly.mod(rsPoly);ecdata[r]=[];for(i=0;i<rsPoly.getLength()-1;i++)ecdata[r][i]=modPoly.get(i)}var totalCodeCount=0;for(r=0;r<rsBlocks.length;r++)totalCodeCount+=rsBlocks[r].totalCount;var data=[];for(i=0;i<maxDc;i++){for(r=0;r<rsBlocks.length;r++){if(i<dcdata[r].length)data.push(dcdata[r][i])}}for(i=0;i<maxEc;i++){for(r=0;r<rsBlocks.length;r++){if(i<ecdata[r].length)data.push(ecdata[r][i])}}return data}
+var RSBlock={getRSBlocks:function(type,ec){var table={1:[{totalCount:19,dataCount:16}],2:[{totalCount:34,dataCount:28}],3:[{totalCount:55,dataCount:44}],4:[{totalCount:80,dataCount:64}],5:[{totalCount:108,dataCount:86}],6:[{totalCount:136,dataCount:108}],7:[{totalCount:156,dataCount:124}],8:[{totalCount:194,dataCount:154}],9:[{totalCount:232,dataCount:182}],10:[{totalCount:274,dataCount:216}]};if(!table[type]) throw new Error("type overflow");return table[type];}};
+function BitBuffer(){this.buffer=[];this.length=0}
+BitBuffer.prototype={get:function(index){return ((this.buffer[Math.floor(index/8)]>>> (7-index%8)) &1)==1},put:function(num,length){for(var i=0;i<length;i++)this.putBit(((num>>>(length-i-1))&1)==1)},getLengthInBits:function(){return this.length},putBit:function(bit){this.buffer.push(bit?1:0);this.length++}};
+function QRPolynomial(num,shift){if(num.length==undefined)throw new Error(num.length+"/"+shift);var offset=0;while(offset<num.length&&num[offset]==0)offset++;this._num=new Array(num.length-offset+shift);for(var i=0;i<num.length-offset;i++)this._num[i]=num[i+offset]}
+QRPolynomial.prototype={get:function(index){return this._num[index]},getLength:function(){return this._num.length},multiply:function(e){var num=new Array(this.getLength()+e.getLength()-1);for(var i=0;i<this.getLength();i++){for(var j=0;j<e.getLength();j++){num[i+j]+=this.get(i)*e.get(j)}}return new QRPolynomial(num,0)},mod:function(e){if(this.getLength()-e.getLength()<0)return this;var ratio=QRMath.glog(this.get(0))-QRMath.glog(e.get(0));var num=new Array(this.getLength());for(var i=0;i<this.getLength();i++)num[i]=this.get(i);for(i=0;i<e.getLength();i++)num[i]^=QRMath.gexp(QRMath.glog(e.get(i))+ratio);return new QRPolynomial(num,0).mod(e)}};
+var QRMath={glog:function(n){if(n<1)throw new Error("glog("+n+")");return QRMath.LOG_TABLE[n]},gexp:function(n){while(n<0)n+=255;while(n>=256)n-=255;return QRMath.EXP_TABLE[n]},EXP_TABLE:new Array(256),LOG_TABLE:new Array(256)};
+for(var i=0;i<256;i++)QRMath.EXP_TABLE[i]=i<8?1<<i:QRMath.EXP_TABLE[i-4]^QRMath.EXP_TABLE[i-5]^QRMath.EXP_TABLE[i-6]^QRMath.EXP_TABLE[i-8];
+for(var i=0;i<255;i++)QRMath.LOG_TABLE[QRMath.EXP_TABLE[i]]=i;
+QRUtil.getErrorCorrectPolynomial=function(ecLength){var a=new QRPolynomial([1],0);for(var i=0;i<ecLength;i++)a=a.multiply(new QRPolynomial([1,QRMath.gexp(i)],0));return a};
+function mapData(qr,data,maskPattern){var inc=-1,row=qr.moduleCount-1,bitIndex=7,byteIndex=0;for(var col=qr.moduleCount-1;col>0;col-=2){if(col==6)col--;for(;;){for(var c=0;c<2;c++){if(qr.modules[row][col-c]==null){var dark=false;if(byteIndex<data.length){dark=((data[byteIndex]>>>bitIndex)&1)==1}if(QRUtil.getMask(maskPattern,row,col-c))dark=!dark;qr.modules[row][col-c]=dark}}row+=inc;if(row<0||qr.moduleCount<=row){row-=inc;inc=-inc;break}}}}
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"/>
-
-  <!-- ORDRE IMPORTANT : la lib QR avant modes.js -->
-  <script src="qrcode.min.js" defer></script>
-  <script src="modes.js" defer></script>
+</script>
+<script src="modes.js" defer></script>
 </head>
 <body>
 <header class="topbar colorful"><h1 id="title">RunMeasure</h1></header>
-
 <main class="container">
-  <div class="nav-row">
-    <a href="options.html" class="btn btn-outline">&larr; Retour</a>
-    <a href="aide.html" class="btn btn-outline">Aide</a>
-  </div>
-
+  <div class="nav-row"><a href="options.html" class="btn btn-outline">&larr; Retour</a><a href="aide.html" class="btn btn-outline">Aide</a></div>
   <section class="card">
     <h2 id="mode-name">Mode</h2>
-
     <div id="params" class="params grid-3"></div>
-
     <div class="timer">
       <div class="circle-wrap hidden" id="circle-wrap">
         <svg viewBox="0 0 120 120" class="circle">
@@ -36,35 +49,20 @@
           <text x="60" y="66" text-anchor="middle" class="circle-text" id="circle-text">00:00</text>
         </svg>
       </div>
-
       <div id="display" class="display">00:00.0</div>
-
       <div class="controls">
         <button id="btn-start" class="btn btn-primary btn-lg" type="button">Démarrer</button>
         <button id="btn-lap" class="btn btn-accent btn-lg" type="button" disabled>Tour</button>
         <button id="btn-stop" class="btn btn-amber btn-lg" type="button" disabled>Stop</button>
         <button id="btn-reset" class="btn btn-danger btn-lg" type="button" disabled>Reset</button>
       </div>
-
-      <div id="live-distance" class="live-distance hidden">
-        Distance cumulée : <span id="live-dist-val">0</span> m
-      </div>
+      <div id="live-distance" class="live-distance hidden">Distance cumulée : <span id="live-dist-val">0</span> m</div>
     </div>
-
     <div id="table-wrap" class="table-wrap hidden">
-      <table id="laps-table">
-        <thead>
-          <tr><th>#</th><th>Temps cumulé</th><th>Temps tour</th><th>Vitesse tour (km/h)</th><th>Distance cumulée (m)</th></tr>
-        </thead>
-        <tbody></tbody>
-        <tfoot>
-          <tr id="row-total" class="strong hidden">
-            <td>Total</td><td id="total-time">—</td><td>—</td><td id="total-speed">—</td><td id="total-distance">—</td>
-          </tr>
-        </tfoot>
+      <table id="laps-table"><thead><tr><th>#</th><th>Temps cumulé</th><th>Temps tour</th><th>Vitesse tour (km/h)</th><th>Distance cumulée (m)</th></tr></thead><tbody></tbody>
+      <tfoot><tr id="row-total" class="strong hidden"><td>Total</td><td id="total-time">—</td><td>—</td><td id="total-speed">—</td><td id="total-distance">—</td></tr></tfoot>
       </table>
     </div>
-
     <div id="results" class="results hidden">
       <div id="fraction-tools" class="card info hidden" style="margin:0 0 1rem 0;">
         <strong>Ajouter une fraction de tour :</strong>
@@ -76,12 +74,7 @@
         </div>
         <small class="info">Distance totale, vitesse et VMA (si applicable) sont recalculées et le QR est mis à jour.</small>
       </div>
-
-      <div id="recap" class="card hidden">
-        <h3>Récapitulatif</h3>
-        <table class="recap-table"><tbody id="recap-body"></tbody></table>
-      </div>
-
+      <div id="recap" class="card hidden"><h3>Récapitulatif</h3><table class="recap-table"><tbody id="recap-body"></tbody></table></div>
       <div class="export-buttons">
         <div>
           <div id="qrcode" class="qrcode"></div>
@@ -93,7 +86,5 @@
     </div>
   </section>
 </main>
-
 <footer class="footer">RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
-</body>
-</html>
+</body></html>
