--- a/aide.html
+++ b/aide.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><title>Aide • RunMeasure</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css"/></head>
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet"><link rel="stylesheet" href="style.css"/></head>
 <body><header class="topbar colorful"><h1>RunMeasure</h1></header>
 <main class="container">
   <div class="nav-row"><a href="index.html" class="btn btn-outline">&larr; Accueil</a><a href="options.html" class="btn btn-outline">Démarrer</a></div>
   <section class="cards-grid">
-    <article class="help-card hc-blue"><h3>Temps intermédiaire</h3><p>QR = <strong>temps cumulés</strong> en <code>tc</code> (<code>MM:SS</code> séparés par <code>|</code>) + <code>distance</code> et <code>intervalle</code>. CSV détaillé.</p></article>
-    <article class="help-card hc-green"><h3>Chrono</h3><p>Chrono simple (pas de tours). Pas de QR. Affichage très lisible.</p></article>
-    <article class="help-card hc-emerald"><h3>Minuteur</h3><p>Compte à rebours (minutes/secondes). Pas de QR. Cercle géant.</p></article>
-    <article class="help-card hc-purple"><h3>Chrono + vitesse</h3><p>Distance fixe → temps et vitesse. QR minimal.</p></article>
-    <article class="help-card hc-amber"><h3>Minuteur + distance</h3><p>Tableau: cumulé / tour / vitesse / distance cumulée. Fractions ¼ ½ ¾.</p></article>
-    <article class="help-card hc-pink"><h3>Demi-Cooper / Cooper</h3><p>6′ / 12′, calcul VMA, fractions prises en compte.</p></article>
+    <article class="help-card hc-blue"><h3>Temps intermédiaire</h3><p>Le QR contient <strong>uniquement</strong> les <em>temps cumulés</em> dans <code>tc</code> au format <code>MM:SS</code> séparés par <code>|</code> (ex. <code>00:34|01:10|01:46|02:21</code>), avec <code>distance</code> et <code>intervalle</code>.</p></article>
+    <article class="help-card hc-green"><h3>Chrono</h3><p>Démarrer/Stop/Reset. Pas de QR. Affichage grand format.</p></article>
+    <article class="help-card hc-emerald"><h3>Minuteur</h3><p>Compte à rebours. Pas de QR. Cercle grand format.</p></article>
+    <article class="help-card hc-purple"><h3>Chrono avec calcul de vitesse</h3><p>Distance fixe (100 m…). Stop à l’arrivée. Récap + QR.</p></article>
+    <article class="help-card hc-amber"><h3>Minuteur avec distance</h3><p>Tableau : cumulé / tour / vitesse / distance cumulée. Fractions ¼ ½ ¾.</p></article>
+    <article class="help-card hc-pink"><h3>Tests d’endurance</h3><p>Demi-Cooper/Cooper avec VMA.</p></article>
   </section>
 </main>
 <footer class="footer">RunMeasure - Equipe EPS Lycée Vauban - LUXEMBOURG - JB</footer></body></html>
