--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@ window.addEventListener('DOMContentLoaded',()=>{try{const s=JSON.parse(localStor
 </script>
 </head>
 <body>
-<header class="topbar colorful"><h1>RunMeasure — V8.3</h1></header>
+<header class="topbar colorful"><h1>RunMeasure</h1></header>
 <main class="container">
   <div class="nav-row"><a href="index.html" class="btn btn-outline">&larr; Accueil</a><a href="aide.html" class="btn btn-outline">Aide</a></div>
 
